--- a/app/views/notifications/_list_noti.html.erb
+++ b/app/views/notifications/_list_noti.html.erb
@@ -1,11 +1,15 @@
-<span class="dropdown-header" id=<%= "notification_manager_count_#{current_employee.id}" %>><%= unread_noti_quantity %> <%= t ".notifications" %></span>
+<% if employee_signed_in? %>
+  <span class="dropdown-header" id=<%= "notification_manager_count_#{current_employee.id}" %>><%= unread_noti_quantity("Employee") %> <%= t ".notifications" %></span>
+<% elsif logged_in? %>
+  <span class="dropdown-header" id=<%= "notification_manager_count_#{current_user.id}" %>><%= user_unread_noti_quantity("User") %> <%= t ".notifications" %></span>
+<% end %>
   <div class="dropdown-divider"></div>
   <div id="remove_list">
   <% notifications.each do |noti| %>
     <% if noti.read == true  %>
       <%= link_to notification_url(noti.id), class: "dropdown-item", id: "noti_#{noti.id}", method: :put do %>
         <i class="fas fa-envelope mr-2"></i>
-        <%= t ".messages" %>
+        <%= t ".message" %>
         <%= noti.sender.name %>
         <p></p>
         <%= time_ago(noti.created_at) %>
@@ -13,7 +17,7 @@
     <% else %>
       <%= link_to notification_url(noti.id), class: "dropdown-item unread_noti", id: "noti_#{noti.id}", method: :put do %>
         <i class="fas fa-envelope mr-2"></i>
-        <%= t ".messages" %>
+        <%= t ".message" %>
         <%= noti.sender.name %>
         <p></p>
         <%= time_ago(noti.created_at) %>
